refactor: 카테고리 캐시 구조 List에서 Map으로 변경 - 카테고리 조회 결과를 List → Map 구조로 변경 - 코드 기반 조회 성능 및 사용성 개선 - 캐시 데이터 구조 변겡에 따른 로직 수정 - 테스트 데이터 및 관련 코드 전반 수정